--- a/x10.man/paper/intro.tex
+++ b/x10.man/paper/intro.tex
@@ -108,6 +108,9 @@ The framework must permit mostly static type-checking.
 
 XXX Overview of our design.
 
+A {\em constrained type} {\tt C(:c)} is a classification of the object
+type {\tt C} using a constraint {\tt c} on properties of the type.
+
 Our basic approach to introducing dependent types into
 class-based statically typed OO languages is to
 follow the spirit of generic types, but use values instead of
@@ -158,38 +161,47 @@ non-empty the condition of $t$ must be consistent with the class
 invariant, if any, of the base class of $t$.  The compiler is required to
 ensure that the type of any variable declaration is non-empty.
 
+\begin{example}	
+The type {\tt C(:self != null)} is true only for non-null values of
+type {\tt C}. The type {\tt int(:self==v)} represents a ``singleton''
+type, an int is of this type only if it has the same value as {\tt v}.
+\end{example}
+
 For brevity, we write {\tt C} as a type as well; it
 corresponds to the (vacuously) constrained type {\tt C(:true)}.
 We also permit the syntax {\tt C(t1,\ldots, tk)} for
 the type {\tt C (:x1 == t1 \&\& \ldots \&\& xk == tk)} (assuming that
 the property list for {\tt C} specifies the {\tt k} properties {\tt
 x1,\ldots, xk}, and each term {\tt ti} is of the correct
-type). Thus, using the definition above, {\tt List(n)} is the type of
+type). 
+
+Thus, using the definition above, {\tt List(n)} is the type of
 all lists of length {\tt n}.
+
 
 \subsection{An example}
 \begin{figure*}
 {\footnotesize
 \begin{verbatim}
-class List(int(:self >= 0) length) {
+class List(int(:self >= 0) n) {
   Object head = null;
-  List(length-1) tail = null;
+  List(n-1) tail = null;
   List(0)() { property(0); }
   List(1)(Object head) { this(head, new List());}
-  List(tail.length+1)(Object head, List tail) {
-    property(tail.length+1);
+  List(tail.n+1)(Object head, List tail) {
+    property(tail.n+1);
     this.head = head;
     this.tail = tail;
   }
-  List(length+arg.length) append(List arg) {
-    return (length == 0) ? arg : new List(head, tail.append(arg));
+  List(n+arg.n) append(List arg) {
+    return (n == 0) ? arg : new List(head, tail.append(arg));
   }
-  List(length) rev() { return rev(new List()); }
-  List(length+acc.length) rev(final List acc) {
-    return (length == 0) ? acc : tail.rev(new List(head, acc));
+  List(n) rev() { return rev(new List()); }
+  List(n+acc.n) rev(final List acc) {
+    return (n == 0) ? acc : tail.rev(new List(head, acc));
   }
-  List(:self.length <= this.length) filter(Predicate f) {
-    if (length==0) return this;
+  List(:self.n <= this.n) filter(Predicate f) {
+    if (n==0) return this;
     if (f.isTrue(head)) {
       List l = tail.filter(f);
       return new List(l+1)(head, l);
@@ -207,7 +219,7 @@ class List(int(:self >= 0) length) {
 
 Figure~\ref{fig:list-example} shows a {\tt List} class.
 Intuitively, this definition states that a {\tt List} has a {\tt int}
-property {\tt length}, which must be non-negative.  The
+property {\tt n}, which must be non-negative.  The
 class has two fields that hold the head and tail of the list.
 
 The first constructor {\tt List()} has a postcondition that
@@ -276,6 +288,7 @@ XXX contrast with hybrid type checking.
 
 \paragraph{Rest of this paper.}
 
+The next section reviews related work.
 Section~\ref{sec:lang} fleshes out the syntactic and semantic details of the
 proposal.
 Formal semantics
@@ -283,8 +296,7 @@ and a soundness theorem
 are presented in Section~\ref{sec:semantics}.
 Section~\ref{sec:examples} works through a number of
 examples using a variety of constraint systems.
-Section~\ref{sec:related} reviews related work.
-Last, Sections~\ref{sec:future}
+Sections~\ref{sec:future}
 and \ref{sec:conclusions} conclude the paper with a discussion of
 future work.
 
